Update location